# AI_agents_mini_project

./: .gitignore  README.md  pyproject.toml
src/research/: paths.py
src/research/ai_agents/agents/: simple_agent.py
src/research/ai_agents/environment/: evaluation.py
src/research/datasets/data_construction/: clear_GTA.py  finetuning_data.py
src/research/datasets/environment_datasets/: clear_gta.csv  finetuning_dataset.jsonl  finetuning_dataset_0.jsonl  raw_gta_dataset.json  toolmeta.json
src/research/experiments/experiment01/: baseline_finetuning.ipynb
src/research/prompts/: ReAct_prompts_finetuning.yaml  ReAct_prompts_fs.yaml  act_prompts_fs.yaml
src/research/utils/: utils.py
tests/: test_environements.py
