[project]
name = "ai_agents_mini_project"
version = "0.1.0"
description = "A research project focused on building high-capability AI agents for tool calling tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "pytest>=9.0.2",
    "rapidfuzz>=3.14.3",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "trl>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"



